# lina

./: .gitignore  README.md  iefc.py  imshows.py  pyproject.toml  setup.py  utils.py
example-notebooks/: efc_demo.ipynb  inf.fits
lina/: __init__.py  _version.py  adefc.py  adefc_2dm.py  adefc_bb.py  aefc.py  bbefc.py  bsefc.py  bsiefc.py  control_models.py  coro_utils.py  dm.py  efc.py  efc2dm.py  efc_class.py  iefc.py  iefc2dm.py  iefc_2dm.py  imshows.py  llowfsc.py  llowfsc_sim.py  math_module.py  mscc.py  obs.py  phase_retrieval.py  pointing.py  props.py  psds.py  pwp.py  rt_utils.py  scc.py  scoob_utils.py  shmim_utils.py  telem.py  utils.py  wfe.py
lina/experimental/: aefc_2dm.py  bbpwp.py  control_models_2dm.py
lina/notebooks/: Pointing Noise Demo.ipynb  obs.toml
lina/tests/: mock_model.py
lina/twodm/: iefc_2dm.py
notebooks/: demo_fdpr_maintenance.ipynb  run_llowfsc.ipynb  sim_efc_demo.ipynb
notebooks/rt-sims/: run_cams.ipynb  run_cams.py  run_dynamic_opd.ipynb  run_llowfsc.ipynb  test_rt_sims.ipynb
